add oppties redirect to correct page, fixed navigation bar to take up whole width

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,11 @@
 	font-weight: bold;
 }
 
+#username:hover{
+    background-color: inherit;
+}
+#username{
+    pointer-events: none;
+    cursor: default;
+}
+
