--- a/app/assets/stylesheets/assign.css.scss
+++ b/app/assets/stylesheets/assign.css.scss
@@ -1,19 +1,25 @@
 // Place all the styles related to the Assign controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+h2{
+  width: 600px;
+  margin:0 auto;
+  text-align: center;
+  padding-bottom: 40px;
+  font-family: verdana, arial, helvetica,
+  sans-serif;font-size: 32px;
+}
 .not-assigned-row {
 	min-height: 30px !important;
-	border: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .assigned-row {
 	min-height: 30px !important;
-	border: 1px solid black ;
+    border-bottom: 1px solid black;
 }
 
 .row-item {
-    line-height: 46px !important;
     min-height: 46px !important;
 }
 
@@ -26,7 +32,24 @@
 	background-color: #f00a10 !important; 
 	border-color: #f00a10 !important;
 }
-
+.plus {
+  position:relative;
+  top:15px;
+  left:30px;
+  padding: 0px;
+  width: 20px ;
+  height: 20px ;
+  cursor:pointer;
+}
+.redx {
+  position:relative;
+  top:15px;
+  left:30px;
+  padding: 0px;
+  width: 20px ;
+  height: 20px ;
+  cursor:pointer;
+}
 .un-assign-button:hover {
 	background-color: darken(#f00a10, 10%) !important;
 }
@@ -35,7 +58,13 @@
 .un-assign-button:focus {
 	outline:0 !important;
 }
+.outer-assigned-row{
+  border: 2px solid black;
+}
+.outer-not-assigned-row{
+  border: 2px solid black;
 
+}
 .assign-button {
 	background-color: #005DA0 !important; 
 	border-color: #005DA0 !important; 
