--- a/app/views/assign/index.html.erb
+++ b/app/views/assign/index.html.erb
@@ -1,11 +1,10 @@
 <html>
 <body>
 	<div class="jumbotron container">
-		<h2 style="text-align: center; padding-top: 20px; padding-bottom: 20px;font-family: verdana, arial, helvetica, sans-serif;font-size: 32px;">
-			<%= @oppty.opptyName%></h2>
-		
+		<h2><%= @oppty.opptyName%></h2>
+
 		<div class="col-md-6">
-			<h3 style="padding-bottom: 20px;">Not Assigned Writers</h3>
+			<h4>Not Assigned Writers</h4>
 			<div class="outer-not-assigned-row" id="outer-not-assigned-row">
 				<%@not_assigned_writers.each do |w|%>
 					<div class="col-md-12 not-assigned-row" id=<%=w.id%>>
@@ -13,9 +12,7 @@
 					    	<p class="writer-name"><%=w.name%></p>
 						</div>
 						<div id="button" class="col-md-6 row-item">
-                            <button id="assign-button" class="btn btn-lg btn-primary btn-right assign-button" type="submit"
-                                    onclick="assign(<%= @oppty.id%>, <%= w.id%>)">
-                                    Assign</button>
+                          <img class="plus" onclick="assign(<%= @oppty.id%>, <%= w.id%>)" src="/assets/plus_btn.png" alt="+" border="0"/>
 						</div>
 					</div>
 				<%end%>
@@ -23,7 +20,7 @@
 		</div>
 
 		<div class="col-md-6">
-			<h3 style="padding-bottom: 20px;">Assigned Writers</h3>
+			<h4>Assigned Writers</h4>
 			<div class="outer-assigned-row" id="outer-assigned-row">
 				<%@assigned_writers.each do |w|%>
 					<div class="col-md-12 assigned-row" id=<%=w.user.id%>>
@@ -31,9 +28,7 @@
 				    		<p class="writer-name"><%=w.user.name%></p>
 						</div>
 						<div class="col-md-6 row-item">
-                          <button id="assign-button" class="btn btn-lg btn-primary btn-right un-assign-button" type="submit"
-                                  onclick="unassign(<%= @oppty.id%>, <%= w.user.id%>)">
-                            Unassign</button>
+                          <img class="redx" onclick="unassign(<%= @oppty.id%>, <%= w.user.id%>)" src="/assets/redx.png" alt="+" border="0"/>
 						</div>
 					</div>
 				<%end%>
