--- a/app/views/assign/index.html.erb
+++ b/app/views/assign/index.html.erb
@@ -1,7 +1,7 @@
 <html>
 <body>
 	<div class="jumbotron container">
-		<h2><%= @oppty.opptyName%></h2>
+		<h2 class="assign_name"><%= @oppty.opptyName%></h2>
 
 		<div class="col-md-6">
 			<h4>Not Assigned Writers</h4>
