fixed the oppty field sslOrg to sllOrg

--- a/app/views/oppties/show.html.erb
+++ b/app/views/oppties/show.html.erb
@@ -16,7 +16,7 @@
     <p><b>Number of Writers</b>:</b> <%= @numWriters%></p>
     <p><b>Capture Manager:</b> <%= @oppty.captureMgr%></p>
     <p><b>Program Manager:</b> <%= @oppty.programMgr%></p>
-    <p><b>SSL Organization:</b> <%= @oppty.sslOrg%></p>
+    <p><b>SSL Organization:</b> <%= @oppty.sllOrg%></p>
     <p><b>Technical Lead:</b> <%= @oppty.technicalLead%></p>
     <p><b>SLL Architect:</b> <%= @oppty.slArch%></p>
     <p><b>ED:</b> <%= @oppty.ed%></p>
