little bit of style in browse

--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -17,7 +17,7 @@
         </table>
 
         <!-- Radio Buttons in Browse page to limit the search to opportunities within 30, 60, or 90 days -->
-        <div class="form">
+        <div class="form col-md-12">
           <table>
             <tr>
               <div class="col-md-4">
@@ -49,7 +49,7 @@
               </div>
               <div class="col-md-4">
                 <td colspan=1>
-                  <label class="black-text field-label" style="padding-left:20px;">
+                  <label class="black-text field-label" style="padding-left:50px;">
                     Invalid Field:
                   </label>
                 </td>
@@ -92,7 +92,7 @@
               <!-- drop down menu in Browse Page to sort the opportunities by a specific field -->
               <div class="col-md-4">
                 <td colspan=1>
-                  <label class="black-text sort-dropdown-label" style="padding-left:20px;">
+                  <label class="black-text sort-dropdown-label" style="padding-left:50px;">
                     Sort By:
                   </label>
                 </td>
