added logic when uploaded crm to put oppties to history

--- a/app/views/histories/show.html.erb
+++ b/app/views/histories/show.html.erb
@@ -10,7 +10,7 @@
   <p><b>Number of Writers</b>:</b> <%= @numWriters%></p>
   <p><b>Capture Manager:</b> <%= @history.captureMgr%></p>
   <p><b>Program Manager:</b> <%= @history.programMgr%></p>
-  <p><b>SSL Organization:</b> <%= @history.sslOrg%></p>
+  <p><b>SSL Organization:</b> <%= @history.sllOrg%></p>
   <p><b>Technical Lead:</b> <%= @history.technicalLead%></p>
   <p><b>SLL Architect:</b> <%= @history.slArch%></p>
   <p><b>ED:</b> <%= @history.ed%></p>
