--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -20,21 +20,41 @@
         <div class="form">
           <table>
             <tr>
-              <div class="col-md-9">
-                <td class="col-md-1">
+              <div class="col-md-10">
+                <td class="col-md-2">
                   <label class="black-text field-label" style="padding-left: 101px;">
-                    Within:
+                    Invalid Field:
                   </label>
                 </td>
 
-                <td class="col-md-1">
+                <td class="col-md-3">
                   <div>
-                    <div class="toggle-btn radio black-text" id="within" name="within">
-                      <input id="myHistory" name="rbtn" type="radio" value="mine" checked>My History
-                      <br>
+                    <div class="toggle-btn radio black-text" id="invalidDiv" name="invalidDiv">
+                      <div class="row">
+                        <div class="col-md-6" style="padding-right:10px !important;">
+                          <input id="allInvalidFields" name="invalid" type="radio" value="all" checked="true">All
+                          <br>
 
-                      <input id="allHistory" name="rbtn" type="radio" value="all">All History
-                      <br>
+                          <input id="rfpDateField" name="invalid" type="radio" value="rfpDate">RFP Date
+                          <br>
+                    
+                          <input id="leadEstimField" name="invalid" type="radio" value="leadEstim">Lead Estimator
+                          <br>
+                           
+                          <input id="technicalLeadField" name="invalid" type="radio" value="technicalLead">Technical Lead
+                          <br>
+                        </div>
+                        <div class="col-md-6" style="padding-right:10px !important;">
+                          <input id="slDirField" name="invalid" type="radio" value="slDir">Service Line Director
+                          <br>
+
+                          <input id="slArchField" name="invalid" type="radio" value="slArch">Solution Architect
+                          <br>
+
+                          <input id="sllOrgField" name="invalid" type="radio" value="sllOrg">Service Line Lead Organization
+                          <br>
+                        </div>
+                      </div>
                     </div>
                     <td>
                       <a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
@@ -119,103 +139,187 @@
     createClass('html body div.jumbotron div.upper-search-box div.inner-search-bar.col-md-12 table.col-md-12 tbody tr td.col-md-10 form#search-form input#search',"width: 96% !important; padding-left: 10px !important;");
 
 
-    $(document).on("click", "a[name='sort-btn']", function (e) {
-      select = document.getElementById('sorting').value;
-      if (window.location.href.indexOf("sort") > -1 && select != 'none') {
-        var url = window.location.toString();
-        if (window.location.href.indexOf("none") > -1)
-          window.location = url.replace(/sorting=none/, 'sort='+select);
-        else if (window.location.href.indexOf("proposalDueDate") > -1)
-          window.location = url.replace(/sort=proposalDueDate/, 'sort='+select);
-        else if (window.location.href.indexOf("opptyName") > -1)
-          window.location = url.replace(/sort=opptyName/, 'sort='+select);
-        else if (window.location.href.indexOf("opptyId") > -1)
-          window.location = url.replace(/sort=opptyId/, 'sort='+select);
-        else if (window.location.href.indexOf("captureMgr") > -1)
-          window.location = url.replace(/sort=captureMgr/, 'sort='+select);
-        else if (window.location.href.indexOf("programMgr") > -1)
-          window.location = url.replace(/sort=programMgr/, 'sort='+select);
-        else if (window.location.href.indexOf("proposalMgr") > -1)
-          window.location = url.replace(/sort=proposalMgr/, 'sort='+select);
-        else if (window.location.href.indexOf("value") > -1)
-          window.location = url.replace(/sort=value/, 'sort='+select);
+    $(document).on("click", "a[name='invalid-btn']", function (e) {
+      var radioButtons = $("#invalidDiv input:radio[name='invalid']");
+      var selectedIndex = radioButtons.index(radioButtons.filter(':checked'));
+      select = document.getElementsByName('invalid')[selectedIndex].value;
+      url = window.location.href;
+      if (window.location.href.indexOf('?') > -1) {
+        urlSplit = url.split('?');
+        if (urlSplit[1].indexOf('&')) {
+          diffParts = urlSplit[1].split('&');
+          
+          if (diffParts.length > 1) 
+            newUrl = urlSplit[0]+'?';
+          else
+            newUrl = urlSplit[0];
+
+          if (urlSplit[1].indexOf('invalid') == -1 && select != "all") {
+            if (urlSplit[1].indexOf('page') == -1)
+              newUrl = url + "&invalid=" + select;
+            else
+              newUrl = urlSplit[0]+'?'+ "invalid=" + select;
+          }
+          else {
+            for (i = 0; i < diffParts.length; i++) {
+              if (diffParts[i].indexOf('invalid') == -1 && diffParts[i].indexOf('page') == -1) {
+                if (i != diffParts.length-1)
+                  newUrl += diffParts[i]+'&';
+                else
+                  newUrl += diffParts[i];
+              }
+              else if (diffParts[i].indexOf('invalid') > -1) {
+                if ( select != "all") {
+                  if (i != diffParts.length-1)
+                    newUrl += "invalid="+select+'&';
+                  else
+                    newUrl += "invalid="+select;
+                }
+              }
+            }
+          }
+        }
+
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl;
       }
-      else if (window.location.href.indexOf("sort") > -1 && select == 'none') 
-        window.location.assign(window.location.href.substring (0, window.location.href.indexOf("sort")));
-      else if (select == "none")
-        window.location.assign( window.location.href );
-      else if (window.location.href.substring(window.location.href.indexOf("/histories"), window.location.href.toString().length ) == "<%= histories_path %>") {
-        if (select == "proposalDueDate")
-          window.location.assign( window.location.href + "?sort=proposalDueDate" );
-        else if (select == "opptyName")
-          window.location.assign(window.location.href + "?sort=opptyName");
-        else if (select == "opptyId")
-          window.location.assign(window.location.href + "?sort=opptyId");
-        else if (select == "captureMgr")
-          window.location.assign(window.location.href + "?sort=captureMgr");
-        else if (select == "programMgr")
-          window.location.assign(window.location.href + "?sort=programMgr");
-        else if (select == "proposalMgr")
-          window.location.assign(window.location.href + "?sort=proposalMgr");
-        else if (select == "value")
-          window.location.assign(window.location.href + "?sort=value");
+      else if (select != "all") {
+        newUrl = window.location.toString();
+
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl + "?invalid=" + select;
       }
       else {
-        if (select == "proposalDueDate")
-          window.location.assign( window.location.href + "&sort=proposalDueDate" );
-        else if (select == "opptyName")
-          window.location.assign(window.location.href + "&sort=opptyName");
-        else if (select == "opptyId")
-          window.location.assign(window.location.href + "&sort=opptyId");
-        else if (select == "captureMgr")
-          window.location.assign(window.location.href + "&sort=captureMgr");
-        else if (select == "programMgr")
-          window.location.assign(window.location.href + "&sort=programMgr");
-        else if (select == "proposalMgr")
-          window.location.assign(window.location.href + "&sort=proposalMgr");
-        else if (select == "value")
-          window.location.assign(window.location.href + "&sort=value");
+        newUrl = window.location.toString();
+
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl;
+      }
+    }); 
+
+    $(document).on("click", "a[name='sort-btn']", function (e) {
+      select = document.getElementById('sorting').value;
+      url = window.location.href;
+      if (window.location.href.indexOf('?') > -1) {
+        urlSplit = url.split('?');
+        if (urlSplit[1].indexOf('&')) {
+          diffParts = urlSplit[1].split('&');
+
+          if (diffParts.length > 1) 
+            newUrl = urlSplit[0]+'?';
+          else
+            newUrl = urlSplit[0];
+
+          if (urlSplit[1].indexOf('sort') == -1 && select != "none") 
+            newUrl = url + "&sort=" + select;
+          else {
+            for (i = 0; i < diffParts.length; i++) {
+              if (diffParts[i].indexOf('sort') == -1) {
+                if (i != diffParts.length-1)
+                  newUrl += diffParts[i]+'&';
+                else
+                  newUrl += diffParts[i];
+              }
+              else if (diffParts[i].indexOf('sort') > -1) {
+                if ( select != "none") {
+                  if (i != diffParts.length-1)
+                    newUrl += "sort="+select+'&';
+                  else
+                    newUrl += "sort="+select;
+                }
+              }
+            }
+          }
+        }
+
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl;
+      }
+      else if (select != "none") {
+        newUrl = window.location.toString();
+
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl + "?sort=" + select;
+      }
+      else { 
+        newUrl = window.location.toString();
+
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl;
       }
     });
 
     $(document).on("click", "a[name='radio-style-btn']", function (e) {
       var radioButtons = $("#within input:radio[name='limiting']");
       var selectedIndex = radioButtons.index(radioButtons.filter(':checked'));
-      select = document.getElementsByName('rbtn')[selectedIndex].value;
-      if (window.location.href.indexOf("within") > -1) {
-        var url = window.location.toString();
-        if (window.location.href.indexOf("within=mine") > -1)
-          window.location.href = url.replace(/within=mine/, 'within='+select);
-        else if (window.location.href.indexOf("within=all") > -1)
-          window.location.href = url.replace(/within=all/, 'within='+select);
+      select = document.getElementsByName('limiting')[selectedIndex].value;
+      url = window.location.href;
+      if (window.location.href.indexOf('?') > -1) {
+        urlSplit = url.split('?');
+        if (urlSplit[1].indexOf('&')) {
+          diffParts = urlSplit[1].split('&');
+          
+          if (diffParts.length > 1) 
+            newUrl = urlSplit[0]+'?';
+          else
+            newUrl = urlSplit[0];
+
+          if (urlSplit[1].indexOf('within') == -1 && select != "999999") {
+            if (urlSplit[1].indexOf('page') == -1)
+              newUrl = url + "&within=" + select;
+            else
+              newUrl = urlSplit[0]+'?'+ "within=" + select;
+          }
+          else {
+            for (i = 0; i < diffParts.length; i++) {
+              if (diffParts[i].indexOf('within') == -1 && diffParts[i].indexOf('page') == -1) {
+                if (i != diffParts.length-1)
+                  newUrl += diffParts[i]+'&';
+                else
+                  newUrl += diffParts[i];
+              }
+              else if (diffParts[i].indexOf('within') > -1) {
+                if ( select != "999999") {
+                  if (i != diffParts.length-1)
+                    newUrl += "within="+select+'&';
+                  else
+                    newUrl += "within="+select;
+                }
+              }
+            }
+          }
+        }
+
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl;
       }
-      else if (window.location.href.substring(window.location.href.indexOf("/histories"), window.location.href.toString().length ) == "<%= histories_path %>") {
-        if (select == "mine")
-          window.location.assign( window.location.href + "?within=mine" );
-        else if (select == "all")
-          window.location.assign(window.location.href + "?within=all");
+      else if (select != "999999") {
+        newUrl = window.location.toString();
+
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl + "?within=" + select;
       }
       else {
-        if (select == "mine")
-          window.location.assign( window.location.href + "&within=mine" );
-        else if (select == "all")
-          window.location.assign(window.location.href + "&within=all");
-      }
+        newUrl = window.location.toString();
 
-    });
-    
+        if (newUrl.substring(newUrl.length-1) == '&')
+          newUrl = newUrl.substring(0, newUrl.length-1);
+        window.location = newUrl;
+      }
+    }); 
+
     window.onload = function() {
-      if (window.location.href.indexOf("within") > -1) {
-        if (window.location.href.indexOf("within=mine") > -1)
-          document.getElementById("myHistory").checked = true;
-        else if (window.location.href.indexOf("within=all") > -1)
-          document.getElementById("allHistory").checked = true;
-      }
 
-      if (window.location.href.indexOf("sort")){
-        if (window.location.href.indexOf("none") > -1)
-          document.getElementById("opt1").selected = true;
-        else if (window.location.href.indexOf("opptyName") > -1)
+      if (window.location.href.indexOf("sort")) {
+        if (window.location.href.indexOf("opptyName") > -1)
           document.getElementById("opt2").selected = true;
         else if (window.location.href.indexOf("opptyId") > -1)
           document.getElementById("opt3").selected = true;
@@ -229,6 +333,25 @@
           document.getElementById("opt7").selected = true;
         else if (window.location.href.indexOf("value") > -1)
           document.getElementById("opt8").selected = true;
+        else
+          document.getElementById("opt1").selected = true;
+      }
+
+      if (window.location.href.indexOf("invalid")) {
+        if (window.location.href.indexOf("rfpDate") > -1)
+          document.getElementById("rfpDateField").checked = true;
+        else if (window.location.href.indexOf("leadEstim") > -1)
+          document.getElementById("leadEstimField").checked = true;
+        else if (window.location.href.indexOf("technicalLead") > -1)
+          document.getElementById("technicalLeadField").checked = true;
+        else if (window.location.href.indexOf("slDir") > -1)
+          document.getElementById("slDirField").checked = true;
+        else if (window.location.href.indexOf("slArch") > -1)
+          document.getElementById("slArchField").checked = true;
+        else if (window.location.href.indexOf("sllOrg") > -1)
+          document.getElementById("sllOrgField").checked = true;
+        else
+          document.getElementById("allInvalidFields").checked = true;
       }
     }
 
