--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,11 @@
       <div id="navbar" class="navbar-collapse collapse">
         <img class="nav-logo" src="/assets/saic-logo-social-small-grey.png" height="50" width="108">
         <ul class="nav navbar-nav">
-          <%if session[:role]=="writer" %>
+          <%if session[:role]=="Writer" %>
             <li class="tab nav-tasks"><a href=<%= tasks_index_path%>>Assigned Tasks</a></li>
             <li class="tab nav-browse"><a href=<%= browse_index_path%> >Browse</a></li>
           <%end%>
-          <%if session[:role]=="manager" %>
+          <%if session[:role]=="Manager" %>
             <li class="tab nav-allocated_tasks"><a href=<%= allocated_tasks_index_path%>>Allocated Tasks</a></li>
             <li class="tab nav-browse"><a href=<%= browse_index_path%> >Browse</a></li>
             <li class="tab nav-crm"><a href=<%= crm_index_path%>>Upload CRM</a></li>
